--- a/BaseWindow.xaml
+++ b/BaseWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:HumanResourcesDepartmentWPFApp"
         mc:Ignorable="d"
-        Title="BaseWindow" Height="450" Width="800" Closing="BaseClose">
+        Title="Главное окно" Height="450" Width="800" Closing="BaseClose">
     <Grid>
         
     </Grid>
